css/main.css
/* ... */
  #tag {
    width:100%;
    font-size: 40px;
    font-weight: normal;
    margin:0 0 30px;;
    color:#f7f7f9;
  }
  .jumbotron p {
    margin:0 0 125px;
    color:#f7f7f9;
    font-size:12px;
  }
  .jumbotron a {
    color:#f6f7f8;
  }
  div img {
    width:100%;
    height:auto;
  }
  #about {
    padding-top:125px;
    margin-bottom:125px;
  }
  .padded {
    margin-top:125px;
    margin-bottom:125px;
  }
  .member, .member img {
    position:relative;
  }
  .member + h4 {
    transition-duration:1s;
    border-bottom: 1px solid rgba(255, 143, 119, 0);
  }
  .member:after {
    content: '';
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(255, 143, 119, 1.0);
    opacity: 0.35;
    transition-duration:1s;
  }
  .member:hover:after {
    opacity:0;
  }
  .member:hover + h4 {
    border-bottom: 1px solid rgba(255, 143, 119, 1.0);
  }
  .member:hover + h4 .residence {
    color:rgba(30, 30, 41, 1.0);
  }
  .member + h4 .residence {
    float:right;
    color:rgba(30, 30, 41, 0);
    transition-duration:1s;
  }
  .member + h4 .residence i {
    font-size:50%;
  }
  .lead-in {
    font-size:34px;
    line-height:1.1;
    margin-bottom:60px;
  }
  .projects {
    margin-bottom:30px;
  }
  #open_source h2 {
    margin-top:0;
  }
  .more {
    font-size: 13px;
    color: rgba(255, 143, 119, 1.0);
  }
  #contact h3 {
    margin:0;
  }
  .able_phone {
    margin-bottom:20px;
  }
  .able_email {
    margin-bottom: 60px;
  }
  .form-control {
    -webkit-box-shadow: none; /* Android 2.3+, iOS 4.0.2-4.2, Safari 3-4 */
    box-shadow: none;
    border-color: #bcbccf;
    color: rgba(30, 30, 41, 1);
    -webkit-appearance: none;
  }
  .form-control:focus {
    border-color: rgba(255, 143, 119, 1.0);
    outline: 0;
    -webkit-box-shadow: none !important; /* Android 2.3+, iOS 4.0.2-4.2, Safari 3-4 */
    box-shadow: none !important;
    -webkit-appearance: none;
  }
  .btn {
    font-size:15px;
  }
  .btn-default {
    color: rgba(30, 30, 41, 1);
    border-color: #bcbccf;
  }
  .btn-default:hover, .btn-default:focus, .btn-default:active {
    color: rgba(30, 30, 41, 1);
    background-color: #f7f7f9;
    border-color: rgba(255, 143, 119, 1.0);
  }
  hr {
    border-color: #ededf2;
  }
  .alert-thanks {
    background-color: #f7f7f9;
    border-color: rgba(255, 143, 119, 1.0);
    color: rgba(30, 30, 41, 1);
    position: absolute;
    top:0;
    left:0;
    width:100%;
  }
  #stretchy {
    padding: 20px;
    margin-top:20px;
  }
  .stretchy-logo {
    width:100%;
    height:auto;
  }
  #badges a {
    display:block;
    margin-right: 5px;
    float:left;
  }
  #badges a img {
  }
  @media (max-width: 767px) {
    #logo, #tag {
      width:109%;
    }
    .lead-in {
      font-size:26px;
      line-height:1.1;
      margin-bottom:60px;
    }
    .jumbo-content {
      left:-15px;
    }
  }

  h2 {
    border-bottom: 1px solid #ededf2;
    margin-top: 50px;
    padding-bottom: 20px;
    margin-bottom: 10px;
  }

.clearfix::after {
  content: "";
  display: table;
  clear: both;
  margin-bottom: 20px;
}
  

